--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ vignettes/*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
+
+
+.Rd2pdf*
+.Rproj.user
+
+.RData
+*~
